rbx_binary/src/tests/snapshots/rbx_binary__tests__util__ref-adjacent__decoded.snap
---
source: rbx_binary/src/tests/util.rs
expression: decoded_viewed
---
- referent: referent-0
  name: Ref Target
  class: Folder
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    Tags:
      Type: BinaryString
      Value: ""
  children: []
- referent: referent-1
  name: Value
  class: ObjectValue
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    Tags:
      Type: BinaryString
      Value: ""
    Value: referent-0
  children: []
